corrected print_s, implemented pass for str, implemented type cast